kubernetes/teachua-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teachua-backend
  namespace: teachua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teachua-backend
  template:
    metadata:
      labels:
        app: teachua-backend
    spec:
      containers:
      - name: teachua-backend
        image: ghcr.io/natvor/teachua-backend-natvor:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: teachua-backend-service
spec:
  selector:
    app: teachua-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
