kubernetes/teachua-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teachua-frontend
  namespace: teachua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teachua-frontend
  template:
    metadata:
      labels:
        app: teachua-frontend
    spec:
      containers:
      - name: teachua-frontend
        image: ghcr.io/natvor/teachua-frontend-natvor:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: teachua-frontend-service
spec:
  selector:
    app: teachua-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
